--- a/__solution/exercise-2/index.html
+++ b/__solution/exercise-2/index.html
@@ -7,17 +7,15 @@
 </head>
 
 <body>
-    <div class="container">
-        <nav class="bar center-content">
-            Nav
-        </nav>
-        <main class="main center-content">
-            <h1>CONTENT</h1>
-        </main>
-        <footer class="bar center-content">
-            Footer
-        </footer>
-    </div>
+    <nav class="nav">
+        <a href="#">
+            <img src="./imgs/icon.svg" class="logo" alt="Apple logo" />
+        </a>
+        <a href="#">Mac</a>
+        <a href="#">iPad</a>
+        <a href="#">iPhone</a>
+        <a href="#">TV</a>
+    </nav>
 </body>
 
 </html>
