--- a/__solution/exercise-4/index.html
+++ b/__solution/exercise-4/index.html
@@ -7,15 +7,14 @@
 </head>
 
 <body>
-    <nav class="nav">
-        <a href="#">
-            <img src="./imgs/icon.svg" class="logo" alt="Apple logo" />
-        </a>
-        <a href="#">Mac</a>
-        <a href="#">iPad</a>
-        <a href="#">iPhone</a>
-        <a href="#">TV</a>
-    </nav>
+    <div class="main-content">
+        <span class="brow">Limited time</span>
+        <h2>Get iPhone XR from $0 down.*</h2>
+        <p>
+            Trade in your current iPhone and get iPhone XR from $0 down or iPhone XS from $79 down at an Apple Store.
+        </p>
+        <a href="#" class="link">Find a store</a>
+    </div>
 </body>
 
 </html>
