--- a/__solution/exercise-7/index.html
+++ b/__solution/exercise-7/index.html
@@ -1,22 +1,35 @@
-<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <link href="style.css" rel="stylesheet" />
-</head>
+  </head>
 
-<body>
-    <div class="main">
-        <img src="./imgs/product.jpg" class="product-img" />
-        <img src="./imgs/product.jpg" class="product-img" />
-        <img src="./imgs/product.jpg" class="product-img" />
-        <img src="./imgs/product.jpg" class="product-img" />
-        <img src="./imgs/product.jpg" class="product-img" />
-        <img src="./imgs/product.jpg" class="product-img" />
-        <img src="./imgs/product.jpg" class="product-img" />
-        <img src="./imgs/product.jpg" class="product-img" />
-        <img src="./imgs/product.jpg" class="product-img" />
+  <body>
+    <div class="container">
+      <header>
+        <h1>
+          My Website
+        </h1>
+
+        <nav class="desktop-nav">
+          <ul>
+            <li>
+              Home
+            </li>
+            <li>
+              About
+            </li>
+            <li>
+              Contact
+            </li>
+          </ul>
+        </nav>
+
+        <nav class="mobile-nav">
+          <button class="mobile-nav-button" aria-label="Show menu">
+            <img src="hamburger.webp" />
+          </button>
+        </nav>
+      </header>
     </div>
-</body>
-
+  </body>
 </html>
