--- a/workshop/exercise-10/index.html
+++ b/workshop/exercise-10/index.html
@@ -1,18 +1,14 @@
+<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <link href="style.css" rel="stylesheet" />
-</head>
-
-<body>
-    <div class="container">
-        <div class="nav"></div>
-        <div class="aside"></div>
-        <div class="main">
-            <h1>Main content</h1>
-        </div>
-        <div class="footer"></div>
+  </head>
+  <body>
+    <div class="main">
+      <div>
+        <h1 class="fast">Helloooooo</h1>
+        <button class="cool">Cool button</button>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
