--- a/__solution/exercise-9/index.html
+++ b/__solution/exercise-9/index.html
@@ -1,22 +1,59 @@
-<!DOCTYPE html>
-<html>
-
 <head>
-    <link href="style.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
-    <div class="nav">
-        <span class="nav-dropdown">
-            Dropdown
-            <div class="dropdown-menu">
-                <ul class="menu-list">
-                    <li>Amazing</li>
-                    <li>Dropdown</li>
-                    <li>Item 3</li>
-                </ul>
-            </div>
-    </div>
-</body>
+    <h1 class="header">Here are some geography facts</h1>
+    <table class="facts">
+        <tbody>
+            <tr>
+                <th>Country</th>
+                <th>GDP</th>
+                <th>Population</th>
+                <th>Area</th>
+            </tr>
+            <tr>
+                <td>Canada</td>
+                <td>$1.930 trillion</td>
+                <td>37,242,571</td>
+                <td>9,984,670 km2</td>
+            </tr>
+            <tr>
+                <td>United States</td>
+                <td>$20.891 trillion</td>
+                <td>327,167,434</td>
+                <td>9,833,520 km2</td>
+            </tr>
+            <tr>
+                <td>China</td>
+                <td>$27.449 trillion</td>
+                <td>1,403,500,365</td>
+                <td>9,596,961 km2</td>
+            </tr>
+            <tr>
+                <td>Japan</td>
+                <td>$5.632 trillion</td>
+                <td>126,440,000</td>
+                <td>377,973 km2</td>
+            </tr>
+        </tbody>
+    </table>
 
-</html>
+    <h3>Source:</h3>
+    <ul class="links">
+        <li>
+            <a target="_blank" href="https://en.wikipedia.org/wiki/Canada">Canada</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://en.wikipedia.org/wiki/United_States">
+                United States
+            </a>
+        </li>
+        <li>
+            <a target="_blank" href="https://en.wikipedia.org/wiki/China">China</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://en.wikipedia.org/wiki/Japan">Japan</a>
+        </li>
+    </ul>
+</body>
