All exercises - Css (m1-3)

--- a/workshop/exercise-06/index.html
+++ b/workshop/exercise-06/index.html
@@ -9,6 +9,13 @@
     <div class="nav">
         <span class="nav-dropdown">
             Dropdown
+            <div class="menu-dropdown">
+                <ul class="dropdown">
+                    <li>Amazing</li>
+                    <li>Dropdown</li>
+                    <li>Item 3</li>
+                </ul>
+            </div>
         </span>
     </div>
 </body>
