--- a/workshop/exercise-08/index.html
+++ b/workshop/exercise-08/index.html
@@ -40,7 +40,7 @@
           </label>
         </div>
       </div>
-      <div>
+      <div class="section">
         Extras
         <div>
           <label class="checkbox-label">
@@ -71,7 +71,7 @@
         </label>
       </div>
       <div>
-        <label>
+        <label class="comment">
           Special
           <textarea></textarea>
         </label>
